Fixes profile section paginator overflow

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10264,6 +10264,7 @@ footer > ul {
   margin-top: 15px;
   z-index: 100;
   position: relative;
+  flex-wrap: wrap;
 }
 .profile .news_image {
   float: left;
