--- a/resources/assets/sass/_profile.scss
+++ b/resources/assets/sass/_profile.scss
@@ -187,6 +187,7 @@
 		margin-top: 15px;
 		z-index: 100;
 		position: relative;
+		flex-wrap: wrap;
   	}
 
 	.news_image {
